--- a/changemachine.html
+++ b/changemachine.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Coin Flip</title>
+    <title>ChangeMachine</title>
 </head>
 <body>
-
     <a href="index.html"><- Back to Navigation</a><br/><br/>
 
-    <script src="./assets/javascript/coin-flip.js"></script>
+    <script src="./assets/javascript/changemachine.js"></script>
 </body>
 </html>
