--- a/index.html
+++ b/index.html
@@ -9,4 +9,13 @@
     <li>
         <a href="hangman-lite.html">Hangman Lite</a>
     </li>
+    <li>
+        <a href="hares.html">hares</a>
+    </li>
+    <li> 
+        <a href="changemachine.html">changemachine</a>
+    </li>
+    <li>
+        <a href="palindromes.html">palindromes</a>
+    </li>
 </ul>
